--- a/RockYou/wwwroot/index.html
+++ b/RockYou/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/math.js"></script>
 </head>
 
 <body>
