Gave up with Entity Framework Core, I didn't really want to go the whole hog and have a server-side component too.
* Deleted the postgreSQL database as it is no longer required.
* Extended the `JS` page with more examples on how C# can use Javascript methods.

--- a/RockYou/wwwroot/index.html
+++ b/RockYou/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script type="text/javascript" src="js/math.js"></script>
+    <script type="text/javascript" src="js/js-interop.js"></script>
 </head>
 
 <body>
